--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "clean": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && npm cache clean --force && npm install && npm start -- --reset-cache"
   },
   "dependencies": {
-    "@notifee/react-native": "^4.0.1",
+    "@notifee/react-native": "^4.1.0",
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/cli-platform-android": "^9.1.0",
     "@react-native-firebase/app": "^14.2.4",
     "@react-native-firebase/messaging": "^14.2.4",
     "@react-navigation/native": "^6.0.6",
@@ -22,6 +23,7 @@
     "react-native": "0.67.1",
     "react-native-document-picker": "^8.0.0",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-gradle-plugin": "^0.71.4",
     "react-native-permissions": "^3.2.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^3.3.2",
